<resources>
    <string name="app_name">QFlow</string>
    <string name="loginQR">Accede con QR</string>
    <string name="loginApprender">Accede con Apprender</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="entrar">Entrar</string>
    <string name="Cancel">Cancel</string>
    <string name="app_name_icon">app_name</string>
    <string name="name_profile">Javier</string>
    <string name="progress_percent">75%</string>
    <string name="thanks_for_signing_up">Thanks for signing up</string>
    <string name="face">Facebook</string>
    <string name="facebook_app_id">Facebook App ID</string>
    <string name="twitter">Twitter</string>
    <string name="Google">Google</string>
    <string name="usermail">Mail o nombre de usuario</string>
    <string name="mail">\"Mail: \"</string>
    <string name="correo_electr_nico">mail</string>
    <string name="cancel">cancel</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="name_lastName">Name and last name</string>
    <string name="business_associated">Business Associated</string>
    <string name="queue_description">Description</string>
    <string name="accept">Accept</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="capacity">Capacity</string>
    <string name="login_not_successful">Login was not successful</string>
    <string name="join_code">Join Code </string>
    <string name="splashscreen">SplashScreen icon</string>
    <string name="QRLoadingErrorMessage">QR does not contain a QFlowQueue</string>
    <string name="QueueLoadingError">It was not possible to load the Qflow queue</string>
    <string name="JoinQueue">Join Queue</string>
    <string name="turns_wait">Waiting turn</string>
    <string name="start">"Start "</string>
    <string name="active">Locked</string>
    <string name="persons_in_front">People in front you</string>
    <string name="locked">Locked</string>
    <string name="closed">Finish Queue</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="increment">+</string>
    <string name="sub">-</string>
    <string name="advanced">Advance queue</string>
    <string name="advanceop">Advanced options</string>
    <string name="InfoQueue">Info Queue</string>
    <string name="LoadQueue">Load queue was not successful</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="current_queues">Current queues</string>
    <string name="historical_queues">Historical queues</string>
    <string name="avg_service_time">Average service time (minutes)</string>
    <string name="queues_not_found">You don\'t have any current/historical queues</string>
    <string name="minutes_to_wait">Minutes to wait</string>
    <string name="queues_not_advance">Error advancing queue</string>
    <string name="QueueJoiningError">It was not possible to join to that queue, maybe it is full</string>
    <string name="create_queue_not_successful">Create queue not successful</string>
    <string name="queuename">queuename</string>

</resources>
