<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:hint = "@string/usermail"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/inputPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/login_button_selector"
            android:drawablePadding="-35dp"
            android:fontFamily="@font/roboto"
            android:text="Google"
            android:hint = "@string/Google"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnFacebook" />

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/login_button_selector"
            android:drawablePadding="-35dp"
            android:fontFamily="@font/roboto"
            android:maxWidth="150dp"
            android:minWidth="150dp"
            android:text="Facebook"
            android:hint = "@string/face"
            android:textAllCaps="false"
            android:textColor="#0E0C0C"
            app:layout_constraintEnd_toStartOf="@+id/btnTwitter"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toEndOf="@+id/btnGoogle"
            app:layout_constraintTop_toBottomOf="@+id/inputPass" />

        <Button
            android:id="@+id/btnTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/login_button_selector"
            android:drawablePadding="-35dp"
            android:fontFamily="@font/roboto"
            android:maxWidth="150dp"
            android:minWidth="150dp"
            android:text="Twitter"
            android:hint ="@string/twitter"
            android:textAllCaps="false"
            android:textColor="#0E0C0C"
            app:layout_constraintBottom_toBottomOf="@+id/btnFacebook"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/accept_Login"
            android:layout_width="156dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button_selector"
            android:drawablePadding="-35dp"
            android:fontFamily="@font/roboto"
            android:maxWidth="150dp"
            android:minWidth="150dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#0E0C0C"
            app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="157dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/login_button_selector"
            android:drawablePadding="-35dp"
            android:fontFamily="@font/roboto"
            android:maxWidth="150dp"
            android:minWidth="150dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#0E0C0C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>