<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_edit_queue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/home_info_queue_name"
            android:layout_width="126dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primaryTextColor"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/home_info_bss_asoc_queue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/home_info_bss_asoc_queue"
            android:layout_width="126dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primaryTextColor"
            android:text="@string/business_associated"
            app:layout_constraintBottom_toTopOf="@+id/home_info_description_queue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/home_info_description_queue"
            android:layout_width="126dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primaryTextColor"
            android:text="@string/queue_description"
            app:layout_constraintBottom_toTopOf="@+id/home_info_capacity_queue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/home_info_capacity_queue"
            android:layout_width="126dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primaryTextColor"
            android:text="@string/capacity"
            app:layout_constraintBottom_toTopOf="@+id/home_info_dt_created"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/home_info_dt_created"
            android:layout_width="126dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primaryTextColor"
            android:text="@string/date_created"
            app:layout_constraintBottom_toTopOf="@+id/home_info_is_active"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/home_info_is_active"
            android:layout_width="126dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primaryTextColor"
            android:text="@string/is_active"
            app:layout_constraintBottom_toTopOf="@+id/home_info_join_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/home_info_join_id"
            android:layout_width="126dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@color/primaryTextColor"
            android:text="@string/join_code"
            app:layout_constraintBottom_toTopOf="@+id/btnQueueJoinQueue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnQueueJoinQueue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="108dp"
            android:background="@drawable/oval_button"
            android:text="@string/JoinQueue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>