<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_manage_queue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/primaryLightColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="324dp"
        android:layout_height="262dp">

        <Button
            android:id="@+id/btn_resume"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/oval_button"
            android:text="@string/resume"
            app:layout_constraintBottom_toTopOf="@+id/btn_stop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/oval_button"
            android:text="@string/stop"
            app:layout_constraintBottom_toTopOf="@+id/btn_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/oval_button"
            android:text="@string/closed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_advanced"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="12dp"
            android:background="@color/primaryTextColor"
            android:text="@string/advanced"
            app:layout_constraintBottom_toTopOf="@+id/btn_resume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/oval_button"
            android:text="@string/advanced"
            app:layout_constraintBottom_toTopOf="@+id/btn_resume"
            app:layout_constraintEnd_toStartOf="@+id/tv_advanced"
            app:layout_constraintHorizontal_bias="0.926"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>